CREATE TABLE IF NOT EXISTS home_data (
    id BIGINT AUTO_INCREMENT PRIMARY KEY,
    hero_title VARCHAR(200),
    hero_description VARCHAR(500),
    hero_image_url VARCHAR(500),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;

CREATE TABLE IF NOT EXISTS home_testimonials (
    id BIGINT AUTO_INCREMENT PRIMARY KEY,
    customer_name VARCHAR(200),
    content VARCHAR(500),
    avatar_url VARCHAR(500),
    rating INT NOT NULL DEFAULT 5,
    featured BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    INDEX idx_featured (featured)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;


